Bug fix: caret sometimes jumps to start of document while typing

--- a/web/src/TextEditor/TextEditor.scss
+++ b/web/src/TextEditor/TextEditor.scss
@@ -39,7 +39,7 @@
     position: absolute;
     user-select: none;
   }
-  &:focus .caret {
+  &:focus-within .caret {
     border-left: 1px solid black;
     animation: blinker 1s linear infinite;
   }
